<resources>
    <string name="app_name">Planets</string>
    <string name="search_title">Search</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Celestial Bodies:</string>
    <string-array name="mars_moons">
        <item>Phobos</item>
        <item>Deimos</item>
    </string-array>
    <string-array name="fragments">
        <item>Home</item>
        <item>Our Solar System</item>
        <item>Image Gallery</item>
        <item>Send Feedback</item>
        <item>Settings</item>
    </string-array>
    <string-array name="themes">
        <item name="1">Red</item>
        <item name="2">Orange</item>
        <item name="3">Blue</item>
        <item name="4">Green</item>
        <item name="5">Purple</item>
        <item name="6">Dark</item>
    </string-array>
    <string-array name="themesEntries">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
    </string-array>
    <string name="pref_cate_title_1">General</string>
    <string name="pref_1">Rate on the Play Store</string>
    <string name="pref_2">Other Apps</string>
    <string name="pref_cate_title_2">Paid</string>
    <string name="pref_3">Donate</string>
    <string name="pref_5">Theme</string>
    <string name="sun_image">Picture of Sun</string>
    <string name="mercury_image">Picture of Mercury</string>
    <string name="venus_image">Picture of Venus</string>
    <string name="earth_image">Picture of Earth</string>
    <string name="mars_image">Picture of Mars</string>
    <string name="jupiter_image">Picture of Jupiter</string>
    <string name="saturn_image">Picture of Saturn</string>
    <string name="uranus_image">Picture of Uranus</string>
    <string name="neptune_image">Picture of Uranus</string>
    <string name="earth_satellite">Satellite (1)</string>
    <string name="moon_title">Moon</string>
    <string name="moon_image">Picture of the Moon</string>
    <string name="moon_sub_title_1">Specific Information:</string>
    <string name="moon_description">Circumference at Equator: 10,917.0 km\nDiameter: 3,475 km\nMass: 73,476,730,924,573,500 million kg (0.0123 x Earth)\nAverage Distance from Earth: 384,400 km\nLength of Orbit: 27.3 Earth days\nSurface Temperature: -233 to 123 °C</string>
    <string name="moon_sub_title_2">General Information:</string>
    <string name="moon_description_2">The Moon (or Luna) is the Earth’s only natural satellite and was formed 4.6 billion years ago around some 30–50 million years after the formation of the solar system. The Moon is in synchronous rotation with Earth meaning the same side is always facing the Earth. The first unmanned mission to the Moon was in 1959 by the Soviet Lunar Program with the first manned landing being Apollo 11 in 1969.</string>
    <string name="moon_button">Satellite (1)</string>
    <string name="mars_satellite">Satellite (2)</string>
    <string name="phobos_title">Phobos</string>
    <string name="phobos_image">Picture of Phobos</string>
    <string name="phobos_sub_title_1">Specific Information:</string>
    <string name="phobos_description">Dimensions: 27 × 22 × 18 km\nMean radius: 11.2667 km (1.76941 mEarths)\nMass: 1.0659×1016 kg (17.8477 nEarths)\nMean density: 1.876 g/cm cubed\nEquatorial Surface Gravity: 0.0057 m/s squared (581.4 µg)\nEscape Velocity: 11.39 m/s (41 km/h)\nTemperature ≈ 233 K\nApparent magnitude: 11.3</string>
    <string name="phobos_sub_title_2">General Information:</string>
    <string name="phobos_description_2">In the early 17th century, German astronomer Johannes Kepler proposed that Mars might host two moons, given that it lay between the Earth and Jupiter, which were known to have one and four satellites. No evidence of such moons could be found. Although most people thought that Mars had no moons, American astronomer Asaph Hall performed a methodical study from the U.S. Naval Observatory in Washington, D.C., searching closer to the planet than previous surveys.
After searching without success, a frustrated Hall was about to give up but his wife, Angelina, urged him to continue. The next night, August 12, 1877, he discovered the moon that would later be known as Deimos. Six days later, he found Phobos as well. The two moons lay so close to their primary that they were hidden by the planet\'s glare. Asteroid-sized, they are also two of the smallest moons in the solar system, with the larger Phobos 7.24 times as massive as its companion, Deimos.</string>
    <string name="deimos_satellite">Satellite (2)</string>
    <string name="deimos_title">Deimos</string>
    <string name="deimos_image">Picture of Deimos</string>
    <string name="deimos_sub_title_1">Specific Information:</string>
    <string name="deimos_description">Dimensions: 7.8 × 6.0 × 5.1 km\nMean Radius: 6.2  ±  0.18 km  (0.97316 mEarths)\nMass: 1.4762×1015 kg (24.7179 nEarths)\nMean Density: 1.471±0.166 g/cm cubed\nEquatorial Surface Gravity: 0.003 m/s squared (306 µg)\nEscape Velocity: 5.556 m/s (20 km/h)\nTemperature ≈ 233 K\nApparent Magnitude: 12.45 ± 0.05 </string>
    <string name="deimos_sub_title_2">General Information:</string>
    <string name="deimos_description_2">On August 12, 1877, the focused search for Martian moons by American astronomer Asaph Hall resulted in the discovery of Deimos. Six days later, he identified the second Martian moon, Phobos.\nThe existence of the moons had been suggested years before, when Johannes Kepler proposed that since Earth hosted one moon and Jupiter four (as only the Galilean moons were known at the time), Mars might have two moons in orbit around it. However, no signs of such moons existed until Hall undertook his careful search.\nUsing a 26-inch refractor at the U.S. Naval Observatory in Washington, D.C., Hall made a methodical study of the region around the red planet. Peering closer to Mars than previous astronomers, he found Deimos circling only 14,576 miles (23,458 kilometers) from the center of the planet, traveling around its equator. Phobos orbited even closer in. Their close proximity and small size had kept them hidden in the glare from the planet.\nLike many objects in the solar system, the Martian moons take their names from Greek mythology. In Homer\'s ancient poem, \"The Iliad,\" Deimos (Flight) and Phobos (Fear) were the twin sons of Mars (Ares to the Greeks), and accompany him into battle.</string>
    <string name="button_source">Source</string>
    <string name="home_title">Home</string>
    <string name="home_info_1">Welcome to Planets!</string>
    <string name="sun_title">Sun (Sol)</string>
    <string name="sun_sub_title_1">Specific Information:</string>
    <string name="sun_description">Age: 4.6 Billion Years\nType: Yellow Dwarf (G2V)\nDiameter: 1,392,684 km\nCircumference at Equator: 4,370,005.6 km\nMass: 1,989,100,000,000,000,000,000 billion kg (333,060 x Earth)\nSurface Temperature: 5500 °C</string>
    <string name="sun_sub_title_2">General Information:</string>
    <string name="venus_title">Venus</string>
    <string name="venus_sub_title_1">Specific Information:</string>
    <string name="venus_description">Mass: 4,867,320,000,000,000 billion kg (0.815 x Earth)\nEquatorial Diameter: 12,104 km\nPolar Diameter: 12,104 km\nEquatorial Circumference: 38,025 km\nKnown Satellites: none\nNotable Satellites: none\nOrbit Distance: 108,209,475 km (0.73 AU)\nOrbit Period: 224.70 Earth days\nSurface Temperature: 462 °C\nFirst Record: 17th century BC\nRecorded By: Babylonian astronomers</string>
    <string name="venus_sub_title_2">General Information:</string>
    <string name="venus_description_2">A day on Venus lasts longer than a year:
It takes 243 Earth days to make rotate once on its axis. The planet’s orbit around the Sun takes 225 Earth days, compared to the Earth’s 365.

Venus is often called the Earth’s sister planet:
Earth and Venus are very similar in size with only a 638 km difference in diameter, Venus having 81.5% of the Earth’s mass. Both also have a central core, a molten mantle and a crust.

Venus rotates counter-clockwise:
Also known as retrograde rotation. A possible reason might be a collision in the past with an asteroid or other object that caused the planet to alter its rotational path. It also differs from most other planets in our solar system by having no natural satellites.

Venus is the second brightest object in the night sky:
Only the Moon is brighter. With a magnitude of between -3.8 to -4.6 Venus is so bright it can be seen during daytime on a clear day.

Atmospheric pressure on Venus is 92 times greater than the Earth’s:
While its size and mass are similar to Earth, the small asteroids are crushed when entering its atmosphere, meaning no small craters lie on the surface of the planet. The pressure felt by a human on the surface would be equivalent to that experienced deep beneath the sea on Earth.

Venus is also known as the Morning Star and the Evening Star:
Early civilisations thought Venus was two different bodies, called Phosphorus and Hesperus by the Greeks, and Lucifer and Vesper by the Romans. This is because when its orbit around the Sun overtakes Earth’s orbit, it changes from being visible after sunset to being visible before sunrise. Mayan astronomers made detailed observations of Venus as early as 650 AD.

Venus is the hottest planet in our solar system:
The average surface temperature is 462 °C, and because Venus does not tilt on its axis, there is no seasonal variation. The dense atmosphere of around 96.5 percent carbon dioxide traps heat and causes a greenhouse effect.

A detailed study of Venus is currently underway:
In 2006, the Venus Express space shuttle was sent into orbit around Venus by the European Space Agency, and is sending back information about the planet. Originally planned to last five hundred Earth days, the mission has been extended several times. More than 1,000 volcanoes or volcanic centres larger than 20 km have been found on the surface of Venus.

The Russians sent the first mission to Venus:
The Venera 1 space probe was launched in 1961, but lost contact with base. The USA also lost their first probe to Venus, Mariner 1, although Mariner 2 was able to take measurements of the planet in 1962. The Soviet Union’s Venera 3 was the first man-made craft to land on Venus in 1966.

At one point it was thought Venus might be a tropical paradise:
The dense clouds of sulphuric acid surrounding Venus make it impossible to view its surface from outside its atmosphere. It was only when radio mapping was developed in the 1960s that scientists were able to observe and measure the extreme temperatures and hostile environment. It is thought Venus did once have oceans but these evaporated as the planets temperature increased</string>
</resources>