<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="8dp">

    <PreferenceCategory android:title="@string/pref_cate_title_1">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/themes"
            android:entryValues="@array/themesEntries"
            android:key="prefSetTheme"
            android:summary="Change the design of the app."
            android:title="@string/pref_5" />

        <Preference
            android:summary="Tap here to rate this application on the play store. All feedback is appreciated."
            android:title="@string/pref_1">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.andrewq.planets" />
        </Preference>

        <Preference
            android:summary="Tap here to view other apps from this developer."
            android:title="@string/pref_2">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/developer?id=AMQTech" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_cate_title_2">

        <Preference
            android:summary="Tap here to donate to the developer."
            android:title="@string/pref_3">

            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.andrewq.donate" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>