<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/moonscrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/moon_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/moon_title"
            android:textSize="30sp"
            android:textStyle="bold|italic" />

        <ImageView
            android:id="@+id/moon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moon_title"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/moon_image"
            android:src="@drawable/moon" />

        <TextView
            android:id="@+id/moon_sub_title_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moon"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="4dp"
            android:text="@string/moon_sub_title_1"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/moon_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moon_sub_title_1"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/moon_description"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/moon_sub_title_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/moon_description"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/moon_sub_title_2"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/moon_description_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moon_sub_title_2"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/moon_description_2"
            android:textSize="16sp" />

        <Button
            android:id="@+id/moon_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/moon_description_2"
            android:layout_centerHorizontal="true"
            android:text="@string/moon_satellite" />
    </RelativeLayout>

</ScrollView>